# costhook

./: .mcp.json  CLAUDE.md  README.md  ROADMAP.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 062c1d0b55e2_create_user_profiles_providers_cost_.py  59dc34194f36_enable_rls_on_all_tables.py  abdbdc42036f_enable_rls_on_alembic_version.py  d46d9a347500_add_indexes_on_foreign_keys.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  costs.py  health.py  providers.py  users.py
backend/app/core/: config.py  crypto.py  db.py  security.py
backend/app/crud/: __init__.py  cost.py  provider.py  user.py
backend/app/models/: __init__.py  provider.py  user.py
backend/app/schemas/: __init__.py  cost.py  provider.py  user.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Providers.tsx  Settings.tsx  Signup.tsx
